{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 620,
  "lineage": "51c6081f-be2d-94a8-bc82-0b7cf49c9a27",
  "resources": [
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring_ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"].eks",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "580",
                "uid": "fa6b6680-eb38-4808-bc21-37c3b03cbe33"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_cluster.gpu_e2e",
            "module.eks.data.aws_eks_cluster.main",
            "module.eks.data.aws_eks_cluster_auth.main",
            "module.eks.kubernetes_config_map.aws_auth",
            "module.iam.aws_iam_role.eks_cluster_role",
            "module.iam.aws_iam_role.eks_nodegroup_role",
            "module.iam.data.aws_iam_policy_document.eks_node_assume",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cadb12eb3df62e64",
            "arn": "arn:aws:ec2:us-east-1:478253497479:elastic-ip/eipalloc-0cadb12eb3df62e64",
            "association_id": "eipassoc-0f4d179866d65b10d",
            "domain": "vpc",
            "id": "eipalloc-0cadb12eb3df62e64",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0940cdaf214af8c4d",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-18-210-77-233.compute-1.amazonaws.com",
            "public_ip": "18.210.77.233",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478253497479:internet-gateway/igw-09d88b61d5fd686cd",
            "id": "igw-09d88b61d5fd686cd",
            "owner_id": "478253497479",
            "region": "us-east-1",
            "tags": {
              "Name": "triton-mlops-igw"
            },
            "tags_all": {
              "Name": "triton-mlops-igw"
            },
            "vpc_id": "vpc-0817b1b310e7ffc4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cadb12eb3df62e64",
            "association_id": "eipassoc-0f4d179866d65b10d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e590e63b7fed4d2d",
            "network_interface_id": "eni-0940cdaf214af8c4d",
            "private_ip": "10.0.1.65",
            "public_ip": "18.210.77.233",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d6369a5978f9e7e",
            "vpc_id": "vpc-0817b1b310e7ffc4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478253497479:route-table/rtb-0d527e1bec2f9e7b2",
            "id": "rtb-0d527e1bec2f9e7b2",
            "owner_id": "478253497479",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e590e63b7fed4d2d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "triton-mlops-private-rt"
            },
            "tags_all": {
              "Name": "triton-mlops-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0817b1b310e7ffc4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478253497479",
            "id": "rtb-0d527e1bec2f9e7b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478253497479:route-table/rtb-024edd9f19c5b9117",
            "id": "rtb-024edd9f19c5b9117",
            "owner_id": "478253497479",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d88b61d5fd686cd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "triton-mlops-public-rt"
            },
            "tags_all": {
              "Name": "triton-mlops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0817b1b310e7ffc4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478253497479",
            "id": "rtb-024edd9f19c5b9117",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e331b9a691d361fd",
            "region": "us-east-1",
            "route_table_id": "rtb-0d527e1bec2f9e7b2",
            "subnet_id": "subnet-0c64c62aac43a092d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0267200083c5b5ca1",
            "region": "us-east-1",
            "route_table_id": "rtb-0d527e1bec2f9e7b2",
            "subnet_id": "subnet-02312a6c371b62eed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084c2b62cf54e4fa5",
            "region": "us-east-1",
            "route_table_id": "rtb-024edd9f19c5b9117",
            "subnet_id": "subnet-01d6369a5978f9e7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478253497479:subnet/subnet-0c64c62aac43a092d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c64c62aac43a092d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478253497479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "triton-mlops-private-a",
              "kubernetes.io/cluster/triton-gpu-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Nancy",
              "project": "triton-mlops"
            },
            "tags_all": {
              "Name": "triton-mlops-private-a",
              "kubernetes.io/cluster/triton-gpu-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Nancy",
              "project": "triton-mlops"
            },
            "vpc_id": "vpc-0817b1b310e7ffc4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478253497479",
            "id": "subnet-0c64c62aac43a092d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478253497479:subnet/subnet-02312a6c371b62eed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02312a6c371b62eed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478253497479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "triton-mlops-private-b",
              "kubernetes.io/cluster/triton-gpu-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Nancy",
              "project": "triton-mlops"
            },
            "tags_all": {
              "Name": "triton-mlops-private-b",
              "kubernetes.io/cluster/triton-gpu-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Nancy",
              "project": "triton-mlops"
            },
            "vpc_id": "vpc-0817b1b310e7ffc4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478253497479",
            "id": "subnet-02312a6c371b62eed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478253497479:subnet/subnet-01d6369a5978f9e7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d6369a5978f9e7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "478253497479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "triton-mlops-public-a",
              "kubernetes.io/cluster/triton-gpu-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Nancy",
              "project": "triton-mlops"
            },
            "tags_all": {
              "Name": "triton-mlops-public-a",
              "kubernetes.io/cluster/triton-gpu-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Nancy",
              "project": "triton-mlops"
            },
            "vpc_id": "vpc-0817b1b310e7ffc4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478253497479",
            "id": "subnet-01d6369a5978f9e7e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.gpu_e2e"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gpu_e2e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:478253497479:vpc/vpc-0817b1b310e7ffc4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f79096fd09a00709",
            "default_route_table_id": "rtb-0f3ca071a2a6de945",
            "default_security_group_id": "sg-09932628c670ac602",
            "dhcp_options_id": "dopt-01240a02c2e543439",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0817b1b310e7ffc4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3ca071a2a6de945",
            "owner_id": "478253497479",
            "region": "us-east-1",
            "tags": {
              "Name": "triton-mlops-vpc",
              "owner": "Nancy",
              "project": "triton-mlops"
            },
            "tags_all": {
              "Name": "triton-mlops-vpc",
              "owner": "Nancy",
              "project": "triton-mlops"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "478253497479",
            "id": "vpc-0817b1b310e7ffc4c",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}